style: fix hero image overflowing on mobile

--- a/src/styles/sections/_hero.css
+++ b/src/styles/sections/_hero.css
@@ -15,6 +15,10 @@
   flex-shrink: 0.2;
 }
 
+.top-info-section img {
+  width: 100%;
+}
+
 .top-info-section picture:hover {
   transform: scale(1.05);
 }
@@ -99,5 +103,6 @@
   .top-info-section picture {
     width: 80%;
     margin-top: 2.4rem;
+    min-width: auto;
   }
 }
